--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Istok+Web&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-md">
             <a class="navbar-brand ms-lg-5" href="#">
-                <img src="Website Images\iconYOLO.png" alt="error" width="83" height="34">
+                <img src="Website Images\iconYOLO.png" alt="error" width="83" height="34" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -32,34 +32,36 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse ms-md-5" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-md-5" style="color: white;">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-md-5" style="color: white">
                     <li class="nav-item ms-md-5">
-                        <a class="nav-link ms-md-5" style="color: white;" aria-current="page" href="#"></a>
+                        <a class="nav-link ms-md-5" style="color: white" aria-current="page" href="#"></a>
                     </li>
                     <li class="nav-item ms-md-3">
-                        <a class="nav-link" style="color: white;" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" style="color: white; font-weight: bolder" aria-current="page"
+                            href="#">Home</a>
                     </li>
                     <li class="nav-item ms-md-3">
-                        <a class="nav-link" style="color: white;" href="#">Whitepaper</a>
+                        <a class="nav-link" style="color: white; font-weight: bolder" href="#">Whitepaper</a>
                     </li>
                     <li class="nav-item ms-md-3">
-                        <a class="nav-link" style="color: white;" href="#">Terms & Conditions</a>
+                        <a class="nav-link" style="color: white; font-weight: bolder" href="#">Terms & Conditions</a>
                     </li>
                     <li class="nav-item ms-md-3">
-                        <a class="nav-link" style="color: white;" href="#">Privacy and Policy</a>
+                        <a class="nav-link" style="color: white; font-weight: bolder" href="#">Privacy and Policy</a>
                     </li>
                     <li class="nav-item ms-md-3">
-                        <a class="nav-link" style="color: white;" href="#">About Us</a>
+                        <a class="nav-link" style="color: white; font-weight: bolder" href="#">About Us</a>
                     </li>
                 </ul>
             </div>
         </div>
-    </nav> 
+    </nav>
     <div class="b1">
         <div class="col-xs-12 col-xs-offset-0 col-sm-offset-3 col-sm-6">
-            <button type="button" style="margin-left: 16%; margin-top:8%; font-weight: bold ;"
-                class="btn btn-outline-dark btn-lg">BUY YOL
-                TOKEN</button>
+            <button type="button" style="margin-left: 16%; margin-top: 8%; font-weight: bold"
+                class="btn btn-outline-dark btn-lg">
+                BUY YOL TOKEN
+            </button>
         </div>
     </div>
     <div class="progress__container">
@@ -67,9 +69,10 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;">Step 1: Create an account on
-                WazirX/Binance/CoinSwitch/Bitbns
-                /Huobi/Coinbase <span class="title_time-estimate"></span></p>
+            <p class="step_title" style="margin-top: 10px">
+                Step 1: Create an account on WazirX/Binance/CoinSwitch/Bitbns
+                /Huobi/Coinbase <span class="title_time-estimate"></span>
+            </p>
         </div>
 
         <div class="progress__line"></div>
@@ -78,7 +81,8 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 2: Now create an account on Trust Wallet or Metamask
+            <p class="step_title" style="margin-top: 10px">
+                Step 2: Now create an account on Trust Wallet or Metamask
                 <span class="title_time-estimate"></span>
             </p>
         </div>
@@ -89,19 +93,10 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 3: Add BNB in your WazirX/Binance/CoinSwitch/Bitbns
-                /Huobi/Coinbase <span class="title_time-estimate"></span></p>
-        </div>
-
-        <div class="progress__line"></div>
-
-
-        <div class="progress__step">
-            <div class="step__circle--filled">
-                <span class="fa fa-check"></span>
-            </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 4: Transfer BNB(BEP 20) to your Trust/Metamask
-                Wallet<span class="title_time-estimate"></span></p>
+            <p class="step_title" style="margin-top: 10px">
+                Step 3: Add BNB in your WazirX/Binance/CoinSwitch/Bitbns
+                /Huobi/Coinbase <span class="title_time-estimate"></span>
+            </p>
         </div>
 
         <div class="progress__line"></div>
@@ -110,7 +105,19 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 5: Go to pancakeswap.finance
+            <p class="step_title" style="margin-top: 10px">
+                Step 4: Transfer BNB(BEP 20) to your Trust/Metamask Wallet<span class="title_time-estimate"></span>
+            </p>
+        </div>
+
+        <div class="progress__line"></div>
+
+        <div class="progress__step">
+            <div class="step__circle--filled">
+                <span class="fa fa-check"></span>
+            </div>
+            <p class="step_title" style="margin-top: 10px">
+                Step 5: Go to pancakeswap.finance
                 <span class="title_time-estimate"></span>
             </p>
         </div>
@@ -121,7 +128,8 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 6: Connect to Metamask wallet
+            <p class="step_title" style="margin-top: 10px">
+                Step 6: Connect to Metamask wallet
                 <span class="title_time-estimate"></span>
             </p>
         </div>
@@ -132,8 +140,8 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 7: In the pancake swap, enter the address of Yolo
-                Token
+            <p class="step_title" style="margin-top: 10px">
+                Step 7: In the pancake swap, enter the address of Yolo Token
                 <span class="title_time-estimate"></span>
             </p>
         </div>
@@ -144,7 +152,8 @@
             <div class="step__circle--filled">
                 <span class="fa fa-check"></span>
             </div>
-            <p class="step_title" style="margin-top: 10px;"> Step 8: Swap from BNB to Yolo Token.
+            <p class="step_title" style="margin-top: 10px">
+                Step 8: Swap from BNB to Yolo Token.
                 <span class="title_time-estimate"></span>
             </p>
         </div>
@@ -152,38 +161,45 @@
 
     <!-- tags here -->
     <div class="t">
-        <div class="tags">
-            #YoloAway #RideTheChange
-        </div>
+        <div class="tags">#YoloAway #RideTheChange</div>
     </div>
-
 
     <!-- logos -->
 
     <div class="image123">
-        <div style="float:left;margin-right:10px;margin-left: 6%; margin-top: 2%;">
+        <div style="float: left; margin-right: 10px; margin-left: 6%; margin-top: 2%">
             <img src="Website Images\5.1.png" height="51" width="168" />
         </div>
-        <div style="float:left;margin-right:10px; margin-top: 2%;">
+        <div style="float: left; margin-right: 10px; margin-top: 2%">
             <img class="middle-img" src="Website Images\6.1.png" height="51" width="168" />
         </div>
-        <div style="float:left;margin-right:-155px; margin-left: 575px; margin-top: 2%;">
+        <div style="
+          float: left;
+          margin-right: -155px;
+          margin-left: 575px;
+          margin-top: 2%;
+        ">
             <img src="Website Images\7.1.png" height="51" width="168" />
         </div>
-        <div style="float:left;margin-right:18px; margin-left: 183px;margin-top: 2%;">
+        <div style="
+          float: left;
+          margin-right: 18px;
+          margin-left: 183px;
+          margin-top: 2%;
+        ">
             <img src="Website Images\8.1.png" height="51" width="168" />
         </div>
     </div>
     <!-- heading ROADMAP -->
     <div class="road_map">
-        <h2 id="heading"> ROADMAP </h2>
-        <img src="Website Images\1.1.png" class="img-fluid" alt="" width="1420" height="560">
+        <h2 id="heading">ROADMAP</h2>
+        <img src="Website Images\1.1.png" class="img-fluid" alt="" width="1420" height="560" />
     </div>
 
     <!-- blockchain -->
     <div class="block">
-        <h2 id="heading"> DECENTRALISED RIDE ON BLOCKCHAIN </h2>
-        <img src="Website Images\10.png" class="img-fluid" alt="" width="1400" height="530">
+        <h2 id="heading">DECENTRALISED RIDE ON BLOCKCHAIN</h2>
+        <img src="Website Images\10.png" class="img-fluid" alt="" width="1400" height="530" />
     </div>
 
     <!-- contacts and greeting -->
@@ -202,11 +218,9 @@
         </span>
         <span id="five">+91600805115</span>
     </div>
-    <hr>
+    <hr />
     <div class="social">
-        <span id="one">
-            Social Links
-        </span>
+        <span id="one"> Social Links </span>
         <span id="two">
             <a href="https://www.facebook.com/">
                 <i class="fa-brands fa-facebook-square"></i>
@@ -232,13 +246,33 @@
                 <i class="fa-brands fa-twitter-square"></i>
             </a>
         </span>
+        <span id="seven">
+            <a href="#">
+                <li style="
+              float: right;
+              margin-top: 1%;
+              margin-right: 4%;
+              margin-left: 1%;
+            ">
+                    Privacy and Policy
+                </li>
+            </a>
+        </span>
+        <span id="eight">
+            <a href="#">
+                <li style="float: right; margin-top: 1%; margin-right: 10%">
+                    Terms and Conditions
+                </li>
+            </a>
+        </span>
     </div>
     <div class="foot">
-        <span id="one" style="float: left;">
-            <img src="Website Images\iconYOLO.png" alt="error" width="83" height="34">
+        <span id="one" style="float: left">
+            <img src="Website Images\iconYOLO.png" alt="error" width="83" height="34" />
         </span>
-        <p id="two" style="align-content: center;">
-            &nbsp &nbsp &nbsp &nbsp &nbsp Notices Terms & Conditions Privacy Policy <br>
+        <p id="two" style="align-content: center">
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Notices Terms & Conditions Privacy
+            Policy <br />
             copyright @ 2018 Taxi Town Pvt. Ltd. All rights reserved.
         </p>
     </div>
